# redis_hashboard

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs  serde.rs  server.rs  session.rs
src/server/: client.rs  mod.rs  redis_hash.rs
src/session/: client_action.rs  mod.rs
static/: index.html  script.js
web_content/: package-lock.json  package.json
web_content/src/: App.svelte
web_content/src/lib/: Hash.svelte  Websocket.svelte
