[package]
name = "redis-hashboard"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "websocket-redis-server"
path = "src/main.rs"

[[bin]]
name = "serde"
path = "src/serde.rs"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4.3"
actix-web-actors = "4.1"

redis = "*"

env_logger = "0.10"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
